--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,9 +47,9 @@ jobs:
       - name: Create bundle tarball
         run: |
           VERSION="${{ steps.get_version.outputs.version }}"
-          BUNDLE_NAME="tinyclaw-bundle.tar.gz"
+          BUNDLE_NAME="PIXACLAW-bundle.tar.gz"
           TEMP_DIR=$(mktemp -d)
-          BUNDLE_DIR="$TEMP_DIR/tinyclaw"
+          BUNDLE_DIR="$TEMP_DIR/PIXACLAW"
 
           mkdir -p "$BUNDLE_DIR"
 
@@ -63,7 +63,7 @@ jobs:
           cp -r docs/ "$BUNDLE_DIR/"
           cp -r .agents/ "$BUNDLE_DIR/"
 
-          cp tinyclaw.sh "$BUNDLE_DIR/"
+          cp PIXACLAW.sh "$BUNDLE_DIR/"
 
           cp package.json "$BUNDLE_DIR/"
           cp package-lock.json "$BUNDLE_DIR/"
@@ -76,8 +76,8 @@ jobs:
           cp .gitignore "$BUNDLE_DIR/"
 
           # Make scripts executable
-          chmod +x "$BUNDLE_DIR/bin/tinyclaw"
-          chmod +x "$BUNDLE_DIR/tinyclaw.sh"
+          chmod +x "$BUNDLE_DIR/bin/PIXACLAW"
+          chmod +x "$BUNDLE_DIR/PIXACLAW.sh"
           chmod +x "$BUNDLE_DIR/scripts/install.sh"
           chmod +x "$BUNDLE_DIR/scripts/uninstall.sh"
           chmod +x "$BUNDLE_DIR/scripts/bundle.sh"
@@ -88,7 +88,7 @@ jobs:
 
           # Create tarball
           cd "$TEMP_DIR"
-          tar -czf "$GITHUB_WORKSPACE/$BUNDLE_NAME" tinyclaw/
+          tar -czf "$GITHUB_WORKSPACE/$BUNDLE_NAME" PIXACLAW/
 
           # Get bundle info
           BUNDLE_SIZE=$(du -h "$GITHUB_WORKSPACE/$BUNDLE_NAME" | cut -f1)
@@ -101,7 +101,7 @@ jobs:
         run: |
           VERSION="${{ steps.get_version.outputs.version }}"
           cat > release_notes.md <<EOF
-          ## TinyClaw $VERSION
+          ## PIXACLAW $VERSION
 
           ### Installation
 
@@ -111,13 +111,13 @@ jobs:
           curl -fsSL https://raw.githubusercontent.com/${{ github.repository }}/main/scripts/remote-install.sh | bash
           \`\`\`
 
-          This will automatically download and install TinyClaw with all dependencies.
+          This will automatically download and install PIXACLAW with all dependencies.
 
           #### Manual Install
 
-          1. Download \`tinyclaw-bundle.tar.gz\`
-          2. Extract: \`tar -xzf tinyclaw-bundle.tar.gz\`
-          3. Install: \`cd tinyclaw && ./scripts/install.sh\`
+          1. Download \`PIXACLAW-bundle.tar.gz\`
+          2. Extract: \`tar -xzf PIXACLAW-bundle.tar.gz\`
+          3. Install: \`cd PIXACLAW && ./scripts/install.sh\`
 
           ### What's Changed
 
@@ -137,7 +137,7 @@ jobs:
         with:
           body_path: release_notes.md
           files: |
-            tinyclaw-bundle.tar.gz
+            PIXACLAW-bundle.tar.gz
           draft: false
           prerelease: false
         env:
@@ -147,6 +147,6 @@ jobs:
         if: github.ref_type != 'tag'
         uses: actions/upload-artifact@v4
         with:
-          name: tinyclaw-bundle
-          path: tinyclaw-bundle.tar.gz
+          name: PIXACLAW-bundle
+          path: PIXACLAW-bundle.tar.gz
           retention-days: 7
