--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tinyclaw",
+  "name": "PIXACLAW",
   "version": "0.0.3",
-  "description": "TinyClaw is a tiny agent that acts as your 24/7 personal assistant",
+  "description": "PIXACLAW is a tiny agent that acts as your 24/7 personal assistant",
   "scripts": {
     "build": "tsc && tsc -p tsconfig.visualizer.json && echo '{\"type\":\"module\"}' > dist/visualizer/package.json",
     "build:main": "tsc",
